--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,27 @@
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: bisque;
 }
-h1 {
+h1,
+h2 {
+  text-align: center;
 }
 h2 {
+  color: darkolivegreen;
 }
+
 table {
-  border: 2px solid blueviolet;
+  border: 2px solid darkolivegreen;
+  border-radius: 7px;
+  background-color: blanchedalmond;
+  width: 850px;
+  margin: 0 auto;
 }
 thead {
+  background-color: pink;
 }
 td {
+  border-top: 1px solid darkolivegreen;
+  padding: 4px;
 }
